# qr

./: Cargo.toml  README.md  qr.desktop
.rpm/: qr.spec
src/: main.rs
